<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/toolbar"/>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewUserGuestModeActivity"
    android:background="@color/mainBackground">

    <View
        android:id="@+id/topRectangle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:background="@color/mainElements"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/appLogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/app_logo" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="57dp"
        android:text="@string/appName"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/appLogo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="68dp"
        android:background="@color/white"
        android:ems="10"
        android:text="@string/guestName"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@+id/registrationScreenHeader"
        app:layout_constraintTop_toBottomOf="@+id/registrationScreenHeader" />

    <TextView
        android:id="@+id/userPatronymic"
        android:layout_width="110dp"
        android:layout_height="31dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:text="@string/guestPatronymic"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@+id/registrationScreenHeader"
        app:layout_constraintTop_toBottomOf="@+id/userSurname" />

    <TextView
        android:id="@+id/userSurname"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:ems="10"
        android:text="@string/guestSername"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@+id/registrationScreenHeader"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <TextView
        android:id="@+id/userSexText"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:background="@color/white"
        android:ems="10"
        android:text="@string/guestSex"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userSex" />

    <TextView
        android:id="@+id/userDateBirth"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:background="@color/white"
        android:ems="10"
        android:text="@string/guestDate"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUserDateBirth" />

    <TextView
        android:id="@+id/textUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="4dp"
        android:text="@string/guestUserNameTitle"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/userName"
        app:layout_constraintStart_toStartOf="@+id/registrationScreenHeader" />

    <TextView
        android:id="@+id/textUserSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="4dp"
        android:text="@string/userSurname"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/userSurname"
        app:layout_constraintStart_toStartOf="@+id/registrationScreenHeader" />

    <TextView
        android:id="@+id/textUserDateBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="44dp"
        android:text="@string/userDateBirth"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/registrationScreenHeader" />

    <TextView
        android:id="@+id/textUserPatronymic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/userPatronymic"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/userPatronymic"
        app:layout_constraintStart_toStartOf="@+id/userPatronymic" />

    <TextView
        android:id="@+id/userSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="110dp"
        android:text="@string/userSex"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userDateBirth" />

    <View
        android:id="@+id/footerRectangle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="660dp"
        android:background="@color/mainElements"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topRectangle"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/registrationScreenHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/viewUserMeScreenHeader"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationScreenHeader"
        app:srcCompat="@drawable/view_user_guest_mode_avatar" />

    <ImageView
        android:id="@+id/menuIcon"
        android:layout_marginStart="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu_icon" />

    <Button
        android:id="@+id/buttonToUsers"
        android:layout_width="203dp"
        android:layout_height="41dp"
        android:layout_marginTop="25dp"
        android:background="@color/mainElements"
        android:text="@string/guestButtonToUsersList"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPatronymic" />

    <Button
        android:id="@+id/buttonUsersPet"
        android:layout_width="201dp"
        android:layout_height="38dp"
        android:layout_marginTop="15dp"
        android:background="@color/mainElements"
        android:text="@string/guestButtonUsersPetsList"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonToUsers" />

    <Button
        android:id="@+id/buttonUsersAchievements"
        android:layout_width="220dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:background="@color/mainElements"
        android:text="@string/guestButtonUsersAchievementsList"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUsersPet" />

</androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:visibility="gone"
        app:menu="@menu/nav_menu" />

</androidx.drawerlayout.widget.DrawerLayout>