<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/toolbar"/>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    tools:context=".EditPetProfileActivity">

    <View
        android:id="@+id/topRectangle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:background="@color/mainElements"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateIds" />

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/appLogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/app_logo" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="57dp"
        android:text="@string/appName"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/appLogo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/footerRectangle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="660dp"
        android:background="@color/mainElements"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topRectangle"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/addPetText"
        android:layout_width="192dp"
        android:layout_height="39dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="100dp"
        android:autoSizeTextType="uniform"
        android:text="@string/petProfile"
        android:textColor="#020202"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.128" />

    <TextView
        android:id="@+id/penNameText"
        android:layout_width="71dp"
        android:layout_height="17dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="24dp"
        android:autoSizeTextType="uniform"
        android:text="@string/PetNameText"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPetText" />

    <TextView
        android:id="@+id/datePetText"
        android:layout_width="98dp"
        android:layout_height="17dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:autoSizeTextType="uniform"
        android:text="@string/DatePenText"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPetText" />

    <EditText
        android:id="@+id/enterPetName"
        android:layout_width="127dp"
        android:layout_height="20dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/penNameText" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="127dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="date"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePetText" />

    <RadioGroup
        android:layout_width="127dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sexText">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/MalePet"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/FemalePet"
            android:textColor="@color/black" />
    </RadioGroup>

    <TextView
        android:id="@+id/sexText"
        android:layout_width="71dp"
        android:layout_height="17dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="68dp"
        android:autoSizeTextType="uniform"
        android:text="@string/SexText"
        android:textColor="#0B0B0B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <TextView
        android:id="@+id/breedPetText"
        android:layout_width="71dp"
        android:layout_height="17dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="8dp"
        android:autoSizeTextType="uniform"
        android:text="@string/BreedText"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPetName" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="127dp"
        android:layout_height="20dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="8dp"
        android:background="@color/mainElements"
        android:entries="@array/breedLists"
        android:outlineAmbientShadowColor="@color/black"
        android:outlineSpotShadowColor="@color/black"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breedPetText" />

    <Button
        android:id="@+id/addPetButton"
        android:layout_width="193dp"
        android:layout_height="44dp"
        android:layout_marginTop="430dp"
        android:background="@color/mainElements"
        android:text="@string/addCommandButton"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topRectangle"
        app:layout_constraintVertical_bias="0.688" />

    <Button
        android:id="@+id/changeAvatar"
        android:layout_width="117dp"
        android:layout_height="32dp"
        android:background="@color/mainElements"
        android:text="@string/changeAvatar"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.420" />

    <Button
        android:id="@+id/saveChanges"
        android:layout_width="222dp"
        android:layout_height="32dp"
        android:background="@color/mainElements"
        android:text="@string/saveChanges"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.420" />

    <TextView
        android:id="@+id/skillsPet"
        android:layout_width="127dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/petSkills"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeAvatar" />

    <TableLayout
        android:id="@+id/skillsTable"
        android:layout_width="391dp"
        android:layout_height="239dp"
        android:layout_marginTop="8dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skillsPet">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="42dp">

            <TextView
                android:id="@+id/commandNameText"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="#FFFFFF"
                android:text="@string/CommandName"
                android:textSize="13sp"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/commandDescriptionText"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="#FFFFFF"
                android:text="@string/CommandDescription"
                android:textSize="13sp"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/actionsText"
                android:layout_width="105dp"
                android:layout_height="match_parent"
                android:layout_marginRight="-1dp"
                android:layout_marginBottom="2dp"
                android:textSize="13sp"
                android:background="#FFFFFF"
                android:text="@string/actions"
                android:textAlignment="center"
                android:textColor="#000000" />
        </TableRow>

        <TableRow
            android:layout_width="80dp"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/firstCommand"
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:autoSizeTextType="none"
                android:background="#FFFFFF"
                android:text="@string/sit"

                android:textColor="#000000" />

            <ScrollView
                android:layout_width="200dp"
                android:layout_height="100dp">

                <TextView
                    android:id="@+id/firstDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:autoSizeTextType="none"
                    android:background="#FFFFFF"
                    android:text="@string/sitDescription"
                    android:textColor="#000000" />

            </ScrollView>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="-1dp"
                android:layout_marginBottom="2dp"
                android:background="#FFFFFF">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_gravity="center|center_horizontal"
                    android:background="@color/mainElements"
                    android:text="@string/delete"
                    android:textColor="@color/white">

                </Button>
            </FrameLayout>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/secondCommand"
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="2dp"
                android:autoSizeTextType="none"
                android:background="#FFFFFF"
                android:text="@string/lie"
                android:textColor="#000000" />

            <ScrollView
                android:layout_width="200dp"
                android:layout_height="100dp">

                <TextView
                    android:id="@+id/secondDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:autoSizeTextType="none"
                    android:background="#FFFFFF"
                    android:text="@string/lieDescription"
                    android:textColor="#000000" />
            </ScrollView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginRight="-1dp"
                android:layout_marginBottom="2dp"
                android:background="#FFFFFF">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_gravity="center|center_horizontal"
                    android:background="@color/mainElements"
                    android:text="@string/delete"
                    android:textColor="@color/white">
                </Button>
            </FrameLayout>

        </TableRow>

    </TableLayout>

    <ImageView
        android:id="@+id/imageAvatar"
        android:layout_width="129dp"
        android:layout_height="143dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255"
        app:srcCompat="@drawable/lie" />


</androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:visibility="visible"
        app:menu="@menu/nav_menu" />

</androidx.drawerlayout.widget.DrawerLayout>